--- a/lec_notes/sections/intro.tex
+++ b/lec_notes/sections/intro.tex
@@ -82,4 +82,4 @@ Please read the syllabus posted on the RBOT 250 website thoroughly.
 
 \section{Errata}
 
-If in the course of using these notes, you find sentence errors, errata or mistakes in equations, please annotate them and upload it to the discussion forum. Points will awarded, at on the discretion of the instructor, for such help.
+If in the course of using these notes, you find sentence errors, errata or mistakes in equations, please annotate them and upload it to the discussion forum. Points will awarded, at the discretion of the instructor, for such help.
