--- a/lec_notes/sections/rigid_motions.tex
+++ b/lec_notes/sections/rigid_motions.tex
@@ -917,7 +917,7 @@ The \textit{Euler Angles} are particularly useful for specifying the orientation
 so that altogether, we have a rotation $R_{ij}(\alpha, \beta, \gamma)$ given as 
 %
 \begin{align}
-	R_{ij}(\alpha, \beta, \gamma) &= R+z(\alpha) R_y(\beta) R_z(\gamma) \\
+	R_{ij}(\alpha, \beta, \gamma) &= R_z(\alpha) R_y(\beta) R_z(\gamma) \\
 	%
 	& = \begin{bmatrix}
 	c_\alpha & -s_\alpha & 0 \\
