--- a/lec_notes/def.tex
+++ b/lec_notes/def.tex
@@ -150,3 +150,6 @@
 \def\twistmap{\hat{\xi}}
 \def\bodyform{\mathcal{B}}
 \def\identity{I}
+\newcommand{\fwdmap}[2]{{e^{\twistmap_{#1} #2_#1} }}
+\newcommand{\fwdmaptheta}[1]{{e^{\twistmap_{#1} \theta_#1} }}
+%\def\fwdmap[1]{e^{\twistmap_{#1} } }
