--- a/lec_notes/notes.tex
+++ b/lec_notes/notes.tex
@@ -1,5 +1,5 @@
 
-\documentclass[doublespacing]{brandeis}
+\documentclass[doublespacing, draft]{brandeis}
 \usepackage{bm}
 \usepackage{url}
 \usepackage{tikz}
@@ -126,7 +126,7 @@
 \input{sections/rigid_motions}
 \input{sections/manip_kine}
 %\input{sections/statics_vel_kine}
-%\input{sections/dyna_cont}
+\input{sections/dyna_cont}
 %\input{sections/motion_planning}
 %
 % ---- Bibliography ----
