--- a/lec_notes/sections/robo_confs.tex
+++ b/lec_notes/sections/robo_confs.tex
@@ -189,9 +189,9 @@ There are exceptions to the Gr\"ubler-Kutzbach's mobility criterion such as when
 This special nature of \eqref{eq:mob_cond_planar} arises because the joints' freedoms are not independent in planar motion, because the axes of the turning pairs are all directed parallel to one another, any prismatic pair being perpendicular to them. For spherical motions, the turning axes co-intersect at a single point.
 
 \begin{homework}
-	%\newline
+	Read up on the common kinematic arrangements in Section 1.3 of~\cite{SpongBook} and produce a 2-page single-spaced summary report. Your report must not contain diagrams but feel free to do as much analysis of the configurations of the various kinematic arrangments that are mentioned. \newline
 	\begin{itemize}
-		\item Read up on the common kinematic arrangements in Section 1.3 of Spong and Vidyasagar and produce a 2-page single-spaced summary report. Your report must not contain diagrams but feel free to do as much analysis of the configurations of the various kinematic arrangments that are mentioned.
+%		\item 
 		%
 		\item Using the mobility condition, determine and explain why the SCARA robot of \autoref{fig:scara_bot} has the number degrees of freedom that you find.
 		%
